[gd_scene load_steps=4 format=2]

[ext_resource path="res://star-shooter/scripts/Laser.gd" type="Script" id=1]
[ext_resource path="res://star-shooter/scenes/DeadFX.tscn" type="PackedScene" id=2]
[ext_resource path="res://star-shooter/scenes/TimerToDie.tscn" type="PackedScene" id=3]

[node name="Laser" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DeadFX" parent="." instance=ExtResource( 2 )]

[node name="TimerToDie" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="timeout" from="TimerToDie" to="." method="_on_TimerToDie_timeout"]
